update initial sentence

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <h1>Hi, I'm Leandro 👋</h1>
     <p class="lead">Backend developer focused on <strong>Java + Spring Cloud</strong>. I like building clean microservice stacks: Config Server, Eureka, Gateway, and resilient services.</p>
+    <p class="lead">Data Engineer focused on building reliable data pipelines and scalable architectures. I work mainly with <strong>Python</strong>. but, I’m always eager to learn new technologies.</p>
 
     <section id="projects">
       <h2>Featured projects</h2>
