update initial sentence

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
 
     <h1>Hi, I'm Leandro 👋</h1>
-    <p class="lead">Data Engineer focused on building reliable data pipelines and scalable architectures. I work mainly with <strong>Python</strong>. but, I’m always eager to learn new technologies.</p>
+    <p class="lead">Data Engineer focused on building reliable data pipelines and scalable architectures. I work mainly with <strong>Python</strong>, but, I’m always eager to learn new technologies.</p>
 
     <section id="projects">
       <h2>Featured projects</h2>
