--- a/index.html
+++ b/index.html
@@ -7,24 +7,7 @@
   <meta name="description" content="Backend dev focusing on Java, Spring Cloud, and microservices." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-  <style>
-    :root { --bg:#0f172a; --card:#111827; --text:#e5e7eb; --muted:#9ca3af; --accent:#22d3ee; }
-    *{box-sizing:border-box} body{margin:0;font-family:Inter,system-ui,Arial;background:linear-gradient(120deg,#0f172a,#0b1022);color:var(--text)}
-    .wrap{max-width:980px;margin:0 auto;padding:48px 20px}
-    header{display:flex;align-items:center;justify-content:space-between;gap:16px}
-    .badge{padding:6px 10px;border:1px solid #334155;border-radius:999px;color:var(--muted);font-size:12px}
-    h1{font-size:42px;line-height:1.1;margin:24px 0}
-    p.lead{color:var(--muted);max-width:70ch}
-    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px;margin-top:28px}
-    .card{background:var(--card);border:1px solid #1f2937;border-radius:16px;padding:18px;transition:.2s transform,.2s box-shadow}
-    .card:hover{transform:translateY(-4px);box-shadow:0 10px 30px rgba(0,0,0,.25)}
-    .card h3{margin:8px 0 6px}
-    a{color:var(--accent);text-decoration:none}
-    footer{margin-top:48px;color:var(--muted);font-size:14px}
-    .tags{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
-    .tag{border:1px solid #374151;border-radius:999px;padding:4px 8px;font-size:12px;color:#cbd5e1}
-    .cta{display:inline-block;margin-top:14px;padding:10px 14px;border-radius:10px;background:#0b1220;border:1px solid #334155}
-  </style>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div class="wrap">
@@ -69,8 +52,7 @@
       <p><a href="mailto:leancp@gmail.com">leancp@gmail.com</a> · <a href="https://www.linkedin.com/in/leandrocustodiop/">LinkedIn</a></p>
     </section>
 
-    <footer>© <span id="y"></span> Leandro. Hosted on GitHub Pages.</footer>
+    <footer>© 2025 Leandro. Hosted on GitHub Pages.</footer>
   </div>
-  <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
 </body>
 </html>
