Create Microstack-spring-project card

--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       <h2>Featured projects</h2>
       <div class="grid">
         <article class="card">
+          <img src="assets/img/microstack_spring/microstack_spring_1.png" alt="Microstack Spring architecture" class="project-image">
+          <img src="assets/img/microstack_spring/microstack_spring_2.png" alt="Eureka" class="project-image"> 
           <h3>Microstack Spring (Study)</h3>
-          <p>Mini ambiente de microserviços: Config Server, Eureka, API Gateway e demo-service.</p>
+          <p>Educational microservices environment built with Spring Cloud. Includes Config Server, Eureka, API Gateway, and demo service — ideal for studying distributed architecture concepts..</p>
           <div class="tags">
             <span class="tag">Java</span><span class="tag">Spring Boot</span><span class="tag">Spring Cloud</span>
           </div>
