Create about message

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="badge">Open to work • Backend Java</div>
+      <div class="badge">Open to work • Data Engineer</div>
       <nav><a href="#projects">Projects</a> · <a href="#about">About</a> · <a href="#contact">Contact</a></nav>
     </header>
 
@@ -33,20 +33,20 @@
           <a class="cta" href="https://github.com/leandrocustodiop/microstack-spring" target="_blank" rel="noreferrer">View on GitHub →</a>
         </article>
 
-        <article class="card">
+        <!-- <article class="card">
           <h3>API Gateway Routes</h3>
           <p>Exemplo de roteamento estático e via discovery locator, com filtros e rate limit.</p>
           <div class="tags">
             <span class="tag">Spring Cloud Gateway</span><span class="tag">YAML</span>
           </div>
           <a class="cta" href="#" target="_blank" rel="noreferrer">Demo →</a>
-        </article>
+        </article> -->
       </div>
     </section>
 
     <section id="about">
       <h2>About</h2>
-      <p>Curioso por arquitetura, observabilidade e DX. Estudo diário com projetos práticos.</p>
+      <p>Curious by nature, I love learning how data moves and scales in real systems. My goal is to master modern data engineering tools and contribute to projects that turn information into real value.</p>
     </section>
 
     <section id="contact">
