feat: add detailed project page for Microstack Spring
- Create projects directory for detailed project pages
- Add comprehensive Microstack Spring project page
- Update CSS styles for project details
- Update main portfolio link to new project page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="tags">
             <span class="tag">Java</span><span class="tag">Spring Boot</span><span class="tag">Spring Cloud</span>
           </div>
-          <a class="cta" href="https://github.com/leandrocustodiop/microstack-spring" target="_blank" rel="noreferrer">View on GitHub →</a>
+          <a class="cta" href="projects/microstack-spring.html">View Project Details →</a>
         </article>
 
         <!-- <article class="card">
